

= 2006-09-23

* Fixed event & status bar loop. It was forgotten when I transitioned to the new Ixp::Node#method_missing behavior on 2006-09-22.
  * Thanks to Fredrik Ternerot for reporting this bug.

* When selecting views based on their first letter: if more than one view matches, then they are cycled (adapted from Fredrik Ternerot).


= 2006-09-22

* Ixp::Node#method_missing now only dereferences files. Also, the ! notation has been removed, as you can see below.

    >> Wmii.fs.bar.status
    => #<Ixp::Node:0xb7b5940c @path="/bar/status">
    >> Wmii.fs.bar.status.read
    => ["colors", "data"]
    >> Wmii.fs.bar.status.data
    => "Fri Sep 22 18:46:11 PDT 2006 | 0.06 0.10 0.08 | 531M 100% /home"
    >> Wmii.fs.bar.status.data!
    => #<Ixp::Node:0xb7b377e4 @path="/bar/status/data!">


= 2006-09-21

* Fix some forgotten changes from show_menu() returning *nil*.

* Exception error message (xmessage) now lets you restart *wmiirc*.

* Updated event loop to generate less 9P traffic.


= 2006-09-20

* Included code from upcoming Ruby-IXP 1.1.0 release.

* Ixp::Node#method_missing now only dereferences a node if the method is suffixed with an exclamation mark.

* show_menu now returns *nil* if nothing was chosen.

* Updated event loop for {wmii-3.1's /event overload bug fix}[http://wmii.de/pipermail/wmii/2006-September/002718.html].

* Added explicit termination of already running instances in *wmiirc* via Process.kill and `ps`, instead of using /event as a means of coordinating said task.


= 2006-09-19

* Included Ruby-IXP 1.0.3 release.

* Added Ixp::Node#open method to reduce 9P traffic.

* Added ability to fetch a sub-node via Ixp::Node#method_missing, while not dereferencing it (reading its contents if it is a file), by adding an exclamation to the file name. For example, consider the following output in *wmiish*.

    >> Wmii.fs.bar.status.data
    => "Tue Sep 19 10:50:41 PDT 2006 | 0.30 0.43 0.29 | 1.7G 98% /home"
    >> Wmii.fs.bar.status.data!